force-app/main/default/objects/Project_Contact_Role__c/Project_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Project Contact Role</label>
    <nameField>
        <displayFormat>PCR-{00000000}</displayFormat>
        <label>Project Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>