force-app/main/default/objects/Project_Contact_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Contact__r.AccountId, Contact__r.Account.Name)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>