force-app/main/default/objects/Project_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Contact Roles</relationshipLabel>
    <relationshipName>Project_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>